# differential-reasoner

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: merge_check.yml
benches/: bench_main.rs  bench_main.rs~
benches/benchmarks/: load_triples.rs  mod.rs
encoded_data/test/: abox.ntenc  encoding_mapping.kv  tbox.ntenc
experiments/simple_logic_lubm_data/: .gitignore
experiments/simple_logic_lubm_data/data_for_example/abox/: .gitignore  abox.nt
experiments/simple_logic_lubm_data/data_for_example/tbox/: .gitignore  tbox.nt
experiments/simple_logic_lubm_data/src/: lib.rs
src/: .gitignore  lib.rs  load_encode_triples.rs  main.rs  materializations.rs  model.rs  rdfs_materialization.rs  utils.rs
src/encoder/: encoder.rs
src/owl2rl/: build_dataflow.rs  class_rules.rs  consolidate_stream_aggressively.rs  mod.rs  property_rules.rs
tests/: materialization_tests.rs  materialization_tests.rs~
tests/data/: .gitignore  tbox.ntenc  tiny_abox.nt  tiny_abox.ntenc  tiny_abox_tbox.ntenc
tests/data/update_data/: part2-lubm50_split0.ntenc  part2-lubm50_split1.ntenc  part2-lubm50_split2.ntenc  part2-lubm50_split3.ntenc  part2-lubm50_split4.ntenc  part2-lubm50_split5.ntenc  part2-lubm50_split6.ntenc  part2-lubm50_split7.ntenc  part3-lubm50_split0.ntenc  part3-lubm50_split1.ntenc  part3-lubm50_split2.ntenc  part3-lubm50_split3.ntenc  part3-lubm50_split4.ntenc  part3-lubm50_split5.ntenc  part3-lubm50_split6.ntenc  part3-lubm50_split7.ntenc
tests/utils/: mod.rs
(+6 files in other folders)
