[package]
name = "differential-reasoner"
version = "0.2.0"
authors = ["bruno_rucy <brurucy@gmail.com>"]
edition = "2018"

[dependencies]
timely = "0.12.0"
#differential-dataflow = "0.12.0"
differential-dataflow = { git = "https://github.com/namibj/differential-dataflow.git", rev="4b49f185b6055a61872e1b36b4e74521fa1ff3e5" }
criterion = "0.3.4"
lasso = "0.5.0"
dogsdogsdogs = { git = "https://github.com/namibj/differential-dataflow.git", rev="4b49f185b6055a61872e1b36b4e74521fa1ff3e5" }
