[package]
name = "differential-reasoner"
version = "0.2.0"
edition = "2018"

[dependencies]
timely = "0.12.0"
#differential-dataflow = "0.12.0"
differential-dataflow = { git = "https://github.com/namibj/differential-dataflow.git", rev="4b49f185b6055a61872e1b36b4e74521fa1ff3e5" }
criterion = "0.3.4"
lasso = "0.5.0"
dogsdogsdogs = { git = "https://github.com/namibj/differential-dataflow.git", rev="4b49f185b6055a61872e1b36b4e74521fa1ff3e5" }
clap = "3.0.0-beta.4"
linecount = "0.1.0"
